# neoplayer_ultimate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yml
src/: error.rs  event.rs  main.rs  player.rs  spotify.rs  widgets.rs  youtube.rs
