[package]
name = "ultimate-neoplayer"
version = "0.1.0"
authors = ["arrudagates <arrudagates@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
librespot = "0.2.0"
rspotify = {git = "https://github.com/ramsayleung/rspotify", branch = "master", features = ["cli"]}
termion = "1.5.6"
tokio = { version = "1.7.1", features = ["full"] }
tui = "0.15.0"
unicode-width = "0.1.8"