[package]
name = "ultimate-neoplayer"
version = "0.1.0"
authors = ["arrudagates <arrudagates@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
#librespot = { version = "0.3.1", default-features = false, features = ["pulseaudio-backend"] }
protobuf = "2.27.1"
#rspotify-model = "0.11.3"
termion = "1.5.6"
tokio = { version = "1.7.1", features = ["full"] }
tui = "0.15.0"
unicode-width = "0.1.8"
futures = "0.3.21"
rodio = "0.15.0"
ureq = "2.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
ytd-rs = { version = "0.1.6", features = ["yt-dlp"] }

[dependencies.rspotify]
#version = "0.11.3"
git = "https://github.com/ramsayleung/rspotify"
#branch = "master"
rev = "c40ebd8"
features = ["cli", "env-file"]

[dependencies.rspotify-model]
git = "https://github.com/ramsayleung/rspotify"
#branch = "master"
rev = "c40ebd8"

[dependencies.librespot]
#version = "0.3.1"

git = "https://github.com/librespot-org/librespot"
#branch = "new-api"
rev = "47f1362"

#default-features = false
#features = ["pulseaudio-backend"]

[features]
debug-log = []
